--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,78 @@ p {
 }
 
 .title {
+  font-weight: 900;
+  font-size: 30px;
+  /* margin-top: 1px; */
+  color: hsl(223, 47%, 23%);
+}
+.parag {
+  color: hsl(224, 23%, 55%);
+  margin-inline-end: 8%;
+}
+.card {
+  margin: auto;
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  /* padding: 2rem; */
+  width: 25rem;
+  border-radius: 15px;
+  display: grid;
+  height: 35rem;
+  grid-template-columns: auto;
+  grid-template-rows: 44% auto;
+  grid-template-areas: "image" "text";
+}
+
+.img-hero {
+  grid-area: image;
+  width: 100%;
+  position: relative;
+  background: url("illustration-hero.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.text-area {
+  margin: 1rem;
+  grid-area: text;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.proceed-btn {
+  width: 90%;
+  margin: auto;
+  position: relative;
+}
+.btn {
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%;
+  position: relative;
+  background-color: hsl(245, 75%, 52%);
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 12px;
+  font-size: 16px;
   font-weight: 700;
-  font-size: large;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+}
+.container {
+  background-color: hsl(225, 100%, 98%);
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: auto 60% auto;
+}
+.plan {
+  font-weight: 900;
+  color: hsl(223, 47%, 23%);
+}
+.price {
+  color: hsl(224, 23%, 55%);
 }
