--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "red hat display";
+  background-image: url("./images/pattern-background-desktop.svg");
+  background-repeat: no-repeat;
 }
 
 p {
@@ -19,9 +21,12 @@ p {
 .parag {
   color: hsl(224, 23%, 55%);
   margin-inline-end: 8%;
+  margin-top: 26px;
+  margin-bottom: 24px;
 }
 .card {
   margin: auto;
+  background-color: white;
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -29,9 +34,9 @@ p {
   width: 25rem;
   border-radius: 15px;
   display: grid;
-  height: 35rem;
+  height: 40rem;
   grid-template-columns: auto;
-  grid-template-rows: 44% auto;
+  grid-template-rows: 40% auto;
   grid-template-areas: "image" "text";
 }
 
@@ -39,7 +44,7 @@ p {
   grid-area: image;
   width: 100%;
   position: relative;
-  background: url("illustration-hero.svg");
+  background: url("./images/illustration-hero.svg");
   background-size: auto;
   background-repeat: no-repeat;
   border-top-left-radius: 15px;
@@ -60,9 +65,11 @@ p {
   position: relative;
 }
 .btn {
-  margin-left: 5%;
-  margin-right: 5%;
-  width: 90%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 96%;
   position: relative;
   background-color: hsl(245, 75%, 52%);
   color: white;
@@ -78,6 +85,9 @@ p {
   border-radius: 5px;
   display: grid;
   grid-template-columns: auto 60% auto;
+  padding: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .plan {
   font-weight: 900;
@@ -85,4 +95,15 @@ p {
 }
 .price {
   color: hsl(224, 23%, 55%);
+}
+.change {
+  text-decoration: underline;
+}
+.cancel {
+  text-align: center;
+  font-weight: 900;
+  color: hsl(224, 23%, 55%);
+}
+.icon {
+  margin-right: 15px;
 }
